# mockforge

./: .cargo-mutants.toml  .dockerignore  .editorconfig  .env.example  .env.launch.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .todo-list  .typos.toml  100_PERCENT_COMPLETE.md  ADVANCED_FEATURES_IMPLEMENTATION.md  ADVANCED_ML_IMPLEMENTATION_COMPLETE.md  ADVANCED_OBSERVABILITY_PLAN.md  ADVANCED_ORCHESTRATION_COMPLETE.md  ADVANCED_REPORTING_COMPLETE.md  ADVANCED_RESILIENCE_COMPLETE.md  ADVANCED_TEST_GENERATION_COMPLETE.md  AI_FEATURES_README_MAIN.md  AI_FEATURES_STATUS.md  AI_FEATURES_SUMMARY.md  AI_GENERATOR_USAGE.md  AI_IMPLEMENTATION_COMPLETE.md  AI_IMPLEMENTATION_STATUS.md  AI_INTEGRATION_COMPLETE.md  AI_INTEGRATION_PROGRESS.md  AI_RESPONSE_IMPLEMENTATION_SUMMARY.md  ANALYTICS_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE.md  ASYNC_PROTOCOLS.md  BUILD_AND_TEST_VERIFICATION.md  CHANGELOG.md  CHAOS_LAB_IMPLEMENTATION_STATUS.md  CHAOS_LAB_VERIFICATION.md  CHAOS_ORCHESTRATION_COMPLETE.md  CLAUDE.md  CLI_COMPILATION_STATUS.md  CLOUD_NATIVE_DEPLOYMENT_COMPLETE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_2025_01_27.md  (+161 more)
crates/mockforge-ai-core/: Cargo.toml  README.md
crates/mockforge-ai-core/src/: behavior.rs  config.rs  context.rs  embedding_client.rs  error.rs  history.rs  lib.rs  llm_client.rs  memory.rs  mutation_analyzer.rs  pagination_intelligence.rs  rule_generator.rs  rules.rs  session.rs  sub_scenario.rs  types.rs  validation_generator.rs  visual_layout.rs
crates/mockforge-amqp/: Cargo.toml  README.md
crates/mockforge-amqp/benches/: amqp_benchmarks.rs
crates/mockforge-amqp/src/: bindings.rs  broker.rs  connection.rs  consumers.rs  exchanges.rs  fixtures.rs  lib.rs  messages.rs  metrics.rs  protocol.rs  protocol_server.rs  queues.rs  spec_registry.rs  tls.rs
crates/mockforge-amqp/tests/: amqp_pubsub_e2e.rs  integration.rs
crates/mockforge-analytics/: Cargo.toml  README.md
crates/mockforge-analytics/migrations/: 001_analytics_schema.sql  002_coverage_metrics.sql  002_pillar_usage.sql  003_coverage_metrics.sql
crates/mockforge-analytics/src/: aggregator.rs  config.rs  database.rs  error.rs  export.rs  lib.rs  models.rs  pillar_usage.rs  queries.rs  retention.rs
crates/mockforge-behavioral-cloning/: Cargo.toml  README.md
crates/mockforge-behavioral-cloning/src/: edge_amplifier.rs  error.rs  lib.rs  probabilistic_model.rs  sequence_learner.rs
crates/mockforge-bench/: Cargo.toml  README.md
crates/mockforge-bench/examples/: params-example.json
crates/mockforge-bench/src/: chunked_bench.rs  (+25 more)
crates/mockforge-chaos/: Cargo.toml  README.md
crates/mockforge-chaos-ml/: Cargo.toml
crates/mockforge-chaos-orchestration/: Cargo.toml
crates/mockforge-chaos-proxy/: Cargo.toml
crates/mockforge-cli/: CLI_REFERENCE.md  Cargo.toml  README.md
crates/mockforge-collab/: .gitignore  .sqlx_offline.toml  Cargo.toml  DEPLOYMENT.md  PUBLISHING.md  README.md  SQLX_SETUP.md  build.rs  verify-publish.sh
crates/mockforge-config/: Cargo.toml  README.md
crates/mockforge-contracts/: Cargo.toml
crates/mockforge-core/: Cargo.toml  README.md
crates/mockforge-data/: Cargo.toml  README.md
crates/mockforge-federation/: Cargo.toml  README.md
crates/mockforge-foundation/: Cargo.toml
crates/mockforge-ftp/: Cargo.toml  README.md  lib.d
crates/mockforge-graphql/: Cargo.toml  README.md
crates/mockforge-grpc/: Cargo.toml  README.md  build.rs
crates/mockforge-http/: Cargo.toml  README.md
crates/mockforge-import/: Cargo.toml
crates/mockforge-intelligence/: Cargo.toml
crates/mockforge-k8s-operator/: Cargo.toml  README.md
crates/mockforge-kafka/: Cargo.toml  README.md
crates/mockforge-mqtt/: Cargo.toml  README.md
desktop-app/: Cargo.toml  NOTES.md  README.md  tauri.conf.json
desktop-app/assets/: mockforge.desktop
desktop-app/capabilities/: default.json
desktop-app/docs/: CODE_SIGNING.md  TESTING.md
desktop-app/icons/: README.md  icon.icns
desktop-app/scripts/: create-icons.sh  generate-placeholder-icons.sh
desktop-app/src/: app.rs  commands.rs  main.rs  notifications.rs  server.rs  shortcuts.rs  system_tray.rs  theme.rs  updater.rs
desktop-app/tests/: automated-tests.sh  cross-platform.md
temp-publish/: Cargo.toml
temp-publish/benches/: core_benchmarks.rs
temp-publish/fuzz/: Cargo.toml
temp-publish/src/: cache.rs  chaos_utilities.rs  collection_export.rs  connection_pool.rs  contract_validation.rs  docker_compose.rs  integration_demo.rs  latency.rs  lib.rs  openapi_routes.rs  overrides.rs  plugin_integration.rs  proxy.rs  record_replay.rs  request_chaining.rs  request_fingerprint.rs  server_utils.rs  sync_watcher.rs  templating.rs  token_resolvers.rs  workspace.rs  workspace_import.rs  ws_proxy.rs
temp-publish/tests/: chain_execution_e2e_test.rs  chaining_integration_tests.rs.backup  prop_tests.rs  sync_cross_platform_tests.rs  sync_tests.rs  test_openapi_routes.rs  uuid_validation.rs
tests/: Cargo.toml  README.md  lib.rs
tests/load/: .gitignore  README.md  check_thresholds.py  compare_baseline.py  grpc_load.js  http_load.js  http_load_high_scale.js  marketplace_load.js  run_all_load_tests.sh  run_grpc_load.sh  run_high_scale_load.sh  run_http_load.sh  run_marketplace_load.sh  run_websocket_load.sh  websocket_load.js  websocket_load_high_scale.js  work_http.lua  wrk_http.lua
tests/src/: integration_test_common.rs  lib.rs
tests/tests/: advanced_features_integration.rs  analytics_integration.rs  behavioral_cloning_integration.rs  chaos_lab_integration.rs  component_integration.rs  drift_budget_integration.rs  drift_gitops_integration.rs  e2e.rs  integration_test_common.rs  mockai_integration.rs  mockai_openapi_generation_integration.rs  mockai_rule_explanations_integration.rs  multi_protocol_integration.rs  performance_integration.rs  plugin_system_integration.rs  production_simulation.rs  proxy_verification_tests.rs  reality_continuum.rs  scenario_marketplace_integration.rs  sdk_integration.rs  smart_personas_v2.rs  temporal_simulation.rs  vbr_integration.rs  vbr_new_features.rs  voice_workspace_creation.rs  websocket_integration.rs
(+4339 files in other folders)
