[workspace]
members = [
    "crates/mockforge-cli",
    "crates/mockforge-core",
    "crates/mockforge-http",
    "crates/mockforge-ws",
    "crates/mockforge-grpc",
    "crates/mockforge-graphql",
    "crates/mockforge-data",
    "crates/mockforge-plugin-core",
    "crates/mockforge-plugin-loader",
    "examples/plugins/response-graphql",
    "test_openapi_demo"
    # "crates/mockforge-ui"  # Temporarily excluded due to Send + Sync issues
]
exclude = [
   # "test_openapi_demo"
 ]
resolver = "2"

# Workspace-wide package metadata
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SaaSy Solutions LLC <talksaas@saasysolutionsllc.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SaaSy-Solutions/mockforge"
homepage = "https://mockforge.dev"
documentation = "https://docs.rs/mockforge"
readme = "README.md"
keywords = ["mock", "api", "testing", "grpc", "websocket"]
categories = ["development-tools", "api-bindings", "web-programming"]

# Workspace-wide linting configuration
[workspace.lints.rust]
# Deny these lints
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Enable pedantic lints for high code quality
pedantic = "warn"
nursery = "warn"
cargo = "warn"

# Common workspace dependencies
[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# HTTP/web framework
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# OpenAPI specification handling
openapiv3 = "2.2"

# Error handling
anyhow = "1"
thiserror = "2.0"

# Utility libraries
regex = "1.10"
once_cell = "1"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
base64 = "0.22"
hex = "0.4"
itertools = "0.14"
mime_guess = "2"
urlencoding = "2.1"
glob = "0.3"
globwalk = "0.9"
json-patch = "4.0"
sysinfo = "0.32"

# Authentication libraries
jsonwebtoken = "9.0"
oauth2 = "4.4"
ring = "0.17"

# Encryption libraries
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hmac = "0.12"
pbkdf2 = "0.12"
blake3 = "1.5"
sha2 = "0.10"

# Development tools
mdbook = "0.4"
cargo-release = "0.25"
cargo-audit = "0.18"
cargo-llvm-cov = "0.6"
