[package]
name = "mockforge-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MockForge Desktop Application - Native desktop app for API mocking"
publish = false

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-dialog = "2.6"
tauri-plugin-notification = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-updater = "2.10"
tauri-plugin-opener = "2.5"

# MockForge dependencies
mockforge-core = { path = "../crates/mockforge-core" }
mockforge-http = { path = "../crates/mockforge-http" }
mockforge-ws = { path = "../crates/mockforge-ws" }
mockforge-grpc = { path = "../crates/mockforge-grpc" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
tokio-util = "0.7"

# HTTP server
axum = { workspace = true }
serde_yaml = { workspace = true }

# Update checking
reqwest = { workspace = true, features = ["json"] }

# System integration
dirs = "5.0"
which = "5.0"

# Windows registry access for theme detection
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
