[package]
name = "mockforge-core-test"
version = "0.1.0"
edition = "2021"
authors = ["SaaSy Solutions LLC <ray.clanan@saasysolutionsllc.com>"]
license = "MIT OR Apache-2.0"
description = "Shared logic for MockForge - routing, validation, latency, proxy"
keywords = ["mock", "api", "testing", "http", "grpc"]
categories = ["development-tools::testing", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs"] }
tokio-tungstenite = "0.28"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
anyhow = "1"
thiserror = "2.0"
regex = "1.10"
url = "2.5"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.9"
once_cell = "1"
base64 = "0.22"
base32 = "0.5"
hex = "0.4"
# Encryption dependencies
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hmac = "0.12"
pbkdf2 = "0.12"
blake3 = "1.5"
jsonschema = "0.33.0"
jsonwebtoken = "9.0"
sha2 = "0.10"
openapiv3 = "2.2"
indexmap = "2.0"
axum = { version = "0.8", features = ["ws"] }
json-patch = "4.0"
jsonptr = "0.7.1"
jsonpath = "0.1"
roxmltree = "0.21"
globwalk = "0.9.1"
tempfile = "3.10"
prost = "0.14"
prost-reflect = "0.16"
prost-types = "0.14"
notify = "8.2"
# JavaScript runtime for scripting
rquickjs = { version = "0.9", features = ["macro", "classes"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.0", features = ["macros", "test-util"] }
tower = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.8.0"

[[bench]]
name = "core_benchmarks"
harness = false

# Windows Credential Manager (Windows-only)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Security_Credentials"] }
