[package]
name = "mockforge-ai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core AI/LLM infrastructure for MockForge intelligent behavior"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["mock", "ai", "llm", "testing"]
categories = ["development-tools"]

[features]
default = []
schema = ["schemars"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
schemars = { version = "0.8", optional = true }

[lints.rust]
missing_docs = "deny"
