[package]
name = "mockforge-ai-core"
# Wired into the workspace (#796) but not yet consumed by any published
# crate, so it does not ship to crates.io. Flip to true + add to
# scripts/publish-crates.sh CRATES when it gains a published consumer.
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core AI/LLM infrastructure for MockForge intelligent behavior"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["mock", "ai", "llm", "testing"]
categories = ["development-tools"]

[features]
default = []
schema = ["schemars"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
schemars = { version = "0.8", optional = true }

[lints.rust]
missing_docs = "deny"
