[package]
name = "mockforge-amqp"
version = "0.3.10"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AMQP protocol support for MockForge"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mockforge-core = { version = "0.3.10", path = "../mockforge-core" }
tokio.workspace = true
lapin = "2.3"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion.workspace = true
tempfile = "3"

[[bench]]
name = "amqp_benchmarks"
harness = false
