[package]
name = "mockforge-analytics"
version = "0.3.25"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Traffic analytics and metrics dashboard for MockForge"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono", "json"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Metrics
prometheus = { version = "0.14", features = ["process"] }

# HTTP client (for querying Prometheus)
reqwest = { version = "0.12", features = ["json"] }

# User agent parsing
woothee = "0.13"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[lints]
workspace = true
