[package]
name = "mockforge-behavioral-cloning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Behavioral cloning and sequence learning for MockForge"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["mock", "behavioral", "cloning", "testing"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }

[lints.rust]
missing_docs = "deny"
