[package]
name = "mockforge-behavioral-cloning"
# Wired into the workspace (#796) but not yet consumed by any published
# crate, so it does not ship to crates.io. Flip to true + add to
# scripts/publish-crates.sh CRATES when it gains a published consumer.
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Behavioral cloning and sequence learning for MockForge"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["mock", "behavioral", "cloning", "testing"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }

[lints.rust]
missing_docs = "deny"
