[package]
name = "mockforge-bench"
version = "0.1.0"
edition = "2021"
authors = ["SaaSy Solutions LLC <talksaas@saasysolutionsllc.com>"]
description = "Load and performance testing for MockForge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SaaSy-Solutions/mockforge"
homepage = "https://mockforge.dev"
documentation = "https://docs.rs/mockforge"

[dependencies]
# Core dependencies
mockforge-core = "0.1.0"
mockforge-data = { path = "../mockforge-data" }
mockforge-recorder = { path = "../mockforge-recorder", optional = true }

# OpenAPI and spec parsing
openapiv3 = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client (for target validation)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI utilities
colored = "2.1"
indicatif = "0.17"

# Logging
tracing = "0.1"

# Template rendering
handlebars = "6.2"

# Process execution
which = "7.0"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.14"

[features]
default = []
recorder-integration = ["mockforge-recorder"]
