[package]
name = "mockforge-bench"
version = "0.3.24"
edition = "2021"
authors = ["SaaSy Solutions LLC <ray.clanan@saasysolutionsllc.com>"]
description = "Load and performance testing for MockForge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SaaSy-Solutions/mockforge"
homepage = "https://mockforge.dev"
documentation = "https://docs.rs/mockforge"

[dependencies]
# Core dependencies
mockforge-core = { version = "0.3.23", path = "../mockforge-core" }
mockforge-data = { version = "0.3.23", path = "../mockforge-data" }
mockforge-recorder = { version = "0.3.23", path = "../mockforge-recorder", optional = true }

# OpenAPI and spec parsing
openapiv3 = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# HTTP client (for target validation)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI utilities
colored = "2.1"
indicatif = "0.17"

# Logging
tracing = "0.1"

# Template rendering
handlebars = "6.2"

# Regex for dynamic parameter parsing
regex = "1.11"

# Process execution
which = "7.0"

# File globbing for WAFBench directory patterns
glob = "0.3"

# URL encoding/decoding for WAFBench payload extraction
urlencoding = "2.1"

# URL parsing for base path extraction from OpenAPI servers
url = "2.5"

# OWASP API testing dependencies
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.14"

[features]
default = []
recorder-integration = ["mockforge-recorder"]
