[package]
name = "mockforge-chaos-ml"
# Wired into the workspace (#796) but not yet consumed by any published
# crate, so it does not ship to crates.io. Flip to true + add to
# scripts/publish-crates.sh CRATES when it gains a published consumer.
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ML-powered chaos engineering - anomaly detection, reinforcement learning, predictive remediation"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Orchestration crate (for analytics types used by recommendations/advanced_analytics)
mockforge-chaos-orchestration = { version = "0.3.70", path = "../mockforge-chaos-orchestration" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
chrono = { workspace = true }
rand = { workspace = true }
uuid = { version = "1.23", features = ["v4", "serde"] }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "test-util"] }
